update xunit3 real devices project file

--- a/.github/workflows/xunit3-pipeline.yml
+++ b/.github/workflows/xunit3-pipeline.yml
@@ -99,13 +99,10 @@ jobs:
       run: dotnet restore --force
 
     - name: Build project
-      run: dotnet build -c Release
+      run: dotnet build -c ${{ env.CONFIG }}
 
-    # - name: Compile solution
-    #   run: dotnet build -c ${{ env.CONFIG }}
-    
     - name: Run XUnit3 Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_XUNIT3_PROJECT }} -- --coverage --coverage-output-format ${{ env.COVERAGE_FORMAT }} --coverage-output ${{ env.XUNIT3_INTEGRATION_COVERAGE_FILENAME }}
+      run: dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_XUNIT3_PROJECT }} -- --coverage --coverage-output-format ${{ env.COVERAGE_FORMAT }} --coverage-output ${{ env.XUNIT3_INTEGRATION_COVERAGE_FILENAME }}
 
     - name: Display structure of downloaded files
       run: ls -R
@@ -129,7 +126,10 @@ jobs:
         # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
         dotnet-version: 9.0.x
     
-    - name: Compile solution
+    - name: Restore dependencies
+      run: dotnet restore --force
+
+    - name: Build project
       run: dotnet build -c ${{ env.CONFIG }}
 
     - name: Run XUnit3 Real Integration Tests
