--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -443,13 +443,16 @@ jobs:
       run: dotnet build -c ${{ env.CONFIG }}
 
     - name: Run XUnit3 Integration Tests
-      uses: b3b00/coverlet-action@1.3.5-alpha2
-      with:
-        testProject: ${{ env.M_XUNIT3_PROJECT }}
-        output: ${{ env.XUNIT3_INTEGRATION_COVERAGE_FILENAME }}
-        outputFormat: ${{ env.COVERAGE_FORMAT }}
-        #threshold: ${{ env.COVERAGE_THRESHOLD }}
-        excludes: '[Merlin.XUnit3]Tests.*'
+      run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_XUNIT3_PROJECT }} --no-build /p:CoverletOutput=${{ env.XUNIT3_INTEGRATION_COVERAGE_FILENAME }}
+
+    # - name: Run XUnit3 Integration Tests
+    #   uses: b3b00/coverlet-action@1.3.5-alpha2
+    #   with:
+    #     testProject: ${{ env.M_XUNIT3_PROJECT }}
+    #     output: ${{ env.XUNIT3_INTEGRATION_COVERAGE_FILENAME }}
+    #     outputFormat: ${{ env.COVERAGE_FORMAT }}
+    #     #threshold: ${{ env.COVERAGE_THRESHOLD }}
+    #     excludes: '[Merlin.XUnit3]Tests.*'
 
     - name: Display structure of downloaded files
       run: ls -R
@@ -478,13 +481,15 @@ jobs:
       run: dotnet build -c ${{ env.CONFIG }}
 
     - name: Run XUnit3 Real Integration Tests
-      uses: b3b00/coverlet-action@1.3.5-alpha2
-      with:
-        testProject: ${{ env.M_RD_XUNIT3_PROJECT }}
-        output: ${{ env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME }}
-        outputFormat: ${{ env.COVERAGE_FORMAT }}
-        #threshold: ${{ env.COVERAGE_THRESHOLD }}
-        excludes: '[Merlin.XUnit3.RealDevice]Tests.*'
+      run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_RD_XUNIT3_PROJECT }} --no-build /p:CoverletOutput=${{ env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME }}
+    # - name: Run XUnit3 Real Integration Tests
+    #   uses: b3b00/coverlet-action@1.3.5-alpha2
+    #   with:
+    #     testProject: ${{ env.M_RD_XUNIT3_PROJECT }}
+    #     output: ${{ env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME }}
+    #     outputFormat: ${{ env.COVERAGE_FORMAT }}
+    #     threshold: ${{ env.COVERAGE_THRESHOLD }}
+    #     excludes: '[Merlin.XUnit3.RealDevice]Tests.*'
 
     - name: Display structure of downloaded files
       run: ls -R
