--- a/Saucery.XUnit3/Saucery.XUnit3.csproj
+++ b/Saucery.XUnit3/Saucery.XUnit3.csproj
@@ -10,8 +10,8 @@
 
 	<PropertyGroup>
 		<IsPackable>true</IsPackable>
-		<PackageId>Saucery.XUnit3</PackageId>
-		<PackageVersion>2.0.2</PackageVersion>
+		<PackageId>Saucery.XUnit.v3</PackageId>
+		<PackageVersion>1.0.0</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
 		<Authors>Andrew Gray</Authors>
 		<Company>SauceForge</Company>
@@ -29,15 +29,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<!--<PackageReference Include="Meziantou.Xunit.ParallelTestFramework" Version="2.3.0" />-->
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
 		<PackageReference Include="xunit.v3" Version="2.0.2" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.0">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<!--<PackageReference Include="Saucery.Core" Version="4.5.3" />-->
-		<!--<PackageReference Include="XunitContext" Version="3.3.2" />-->
 		<None Include="Images\Saucery.XUnit.128x128.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
