--- a/.github/workflows/xunit3-pipeline.yml
+++ b/.github/workflows/xunit3-pipeline.yml
@@ -1,13 +1,14 @@
-name: TUnit Only
+name: XUnit3 Only
 
 on:
   push:
     paths:
-      - 'Saucery.TUnit/**'
-      - 'ExternalMerlin.TUnit/**'
-      - 'ExternalMerlin.TUnit.RealDevices/**'
-      - 'Merlin.TUnit/**'
-      - 'Merlin.TUnit.RealDevices/**'
+      - '.github/workflows/xunit3-pipeline.yml'
+      - 'Saucery.XUnit3/**'
+      - 'ExternalMerlin.XUnit3/**'
+      - 'ExternalMerlin.XUnit3.RealDevices/**'
+      - 'Merlin.XUnit3/**'
+      - 'Merlin.XUnit3.RealDevices/**'
     branches:
       - master
       - 'dependabot/**'
@@ -16,32 +17,29 @@ on:
       - 'feature/**'
       - 'fix/**'
       - 'test/**'
-      - 'bug/**'
 
 env:
   PROJECT_NAME: Saucery
   SOLN_FILE: Saucery.sln                                                                        # full path to your solution file
-  NUNIT_INT_DIR: Merlin.NUnit
-  XUNIT_INT_DIR: Merlin.XUnit
-  TUNIT_INT_DIR: Merlin.TUnit
-  NUNIT_RD_INT_DIR: Merlin.NUnit.RealDevices
-  XUNIT_RD_INT_DIR: Merlin.XUnit.RealDevices
-  TUNIT_RD_INT_DIR: Merlin.TUnit.RealDevices
+  XUNIT3_INT_DIR: Merlin.XUnit3
+  XUNIT3_RD_INT_DIR: Merlin.XUnit3.RealDevices         
+  XUNIT3_INT_TEST_RESULTS_DIR: Merlin.XUnit3/bin/Release/net9.0/TestResults
+  XUNIT3_RD_INT_TEST_RESULTS_DIR: Merlin.XUnit3.RealDevices/bin/Release/net9.0/TestResults
   COVERLET_DIR: ./TestResults
   UT_PROJECT: Saucery.Core.Tests/Saucery.Core.Tests.csproj                                      # full path to your unit test project file
-  M_TUNIT_PROJECT: Merlin.TUnit/Merlin.TUnit.csproj                                             # full path to xunit internal integration test project file
-  M_RD_TUNIT_PROJECT: Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj                  # full path to xunit internal integration test project file
-  EM_TUNIT_PROJECT: ExternalMerlin.TUnit/ExternalMerlin.TUnit.csproj                            # full path to xunit external integration test project file
-  EM_RD_TUNIT_PROJECT: ExternalMerlin.TUnit.RealDevices/ExternalMerlin.TUnit.RealDevices.csproj # full path to xunit external integration test project file
+  M_XUNIT3_PROJECT: Merlin.XUnit3/Merlin.XUnit3.csproj                                             # full path to xunit internal integration test project file
+  M_RD_XUNIT3_PROJECT: Merlin.XUnit3.RealDevices/Merlin.XUnit3.RealDevices.csproj                  # full path to xunit internal integration test project file
+  EM_XUNIT3_PROJECT: ExternalMerlin.XUnit3/ExternalMerlin.XUnit3.csproj                            # full path to xunit external integration test project file
+  EM_RD_XUNIT3_PROJECT: ExternalMerlin.XUnit3.RealDevices/ExternalMerlin.XUnit3.RealDevices.csproj # full path to xunit external integration test project file
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
   CONFIG: Release
   APP_PACKAGE_PATH: 'published'                                                                 # set this to the path to your web app project, defaults to the repository root
-  COVERAGE_FORMAT: opencover
+  COVERAGE_FORMAT: cobertura
   UNIT_COVERAGE_FILENAME: opencover.unit.xml
-  TUNIT_INTEGRATION_COVERAGE_FILENAME: opencover.tunit.integration.xml
-  TUNIT_RD_INTEGRATION_COVERAGE_FILENAME: opencover.tunit.realdevice.integration.xml
+  XUNIT3_INTEGRATION_COVERAGE_FILENAME: cobertura.xunit3.integration.xml
+  XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME: cobertura.xunit3.realdevice.integration.xml
   COVERAGE_THRESHOLD: 80
 
 jobs:
@@ -86,10 +84,9 @@ jobs:
         name: unit-test-results
         path: ${{ env.COVERLET_DIR }}/${{env.UNIT_COVERAGE_FILENAME}}
 
-  tunit-integration-tests:
+  xunit3-integration-tests:
     runs-on: ubuntu-latest
     needs: [build]
-
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
@@ -99,23 +96,26 @@ jobs:
       with:
         # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
         dotnet-version: 9.0.x
-    
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
-    
-    - name: Run TUnit Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_TUNIT_PROJECT }} --no-build /p:CoverletOutput=${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
 
+    - name: Restore dependencies
+      run: dotnet restore --force
+
+    - name: Build project
+      run: dotnet build -c ${{ env.CONFIG }}
+
+    - name: Run XUnit3 Integration Tests # as per https://xunit.net/docs/getting-started/v3/code-coverage-with-mtp
+      run: dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_XUNIT3_PROJECT }} -- --coverage --coverage-output-format ${{ env.COVERAGE_FORMAT }} --coverage-output ${{ env.XUNIT3_INTEGRATION_COVERAGE_FILENAME }}
+     
     - name: Display structure of downloaded files
       run: ls -R
 
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: tunit-integration-test-results
-        path: ${{ env.TUNIT_INT_DIR }}/${{env.TUNIT_INTEGRATION_COVERAGE_FILENAME}}
+        name: xunit3-integration-test-results
+        path: ${{ env.XUNIT3_INT_TEST_RESULTS_DIR }}/${{env.XUNIT3_INTEGRATION_COVERAGE_FILENAME}}
 
-  tunit-real-integration-tests:
+  xunit3-real-integration-tests:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -128,62 +128,67 @@ jobs:
         # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
         dotnet-version: 9.0.x
     
-    - name: Compile solution
+    - name: Restore dependencies
+      run: dotnet restore --force
+
+    - name: Build project
       run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run TUnit Real Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_RD_TUNIT_PROJECT }} --no-build /p:CoverletOutput=${{ env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
-    
+    - name: Run XUnit3 Real Integration Tests # as per https://xunit.net/docs/getting-started/v3/code-coverage-with-mtp
+      run: dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_RD_XUNIT3_PROJECT }} -- --coverage --coverage-output-format ${{ env.COVERAGE_FORMAT }} --coverage-output ${{ env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME }}
+       
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: tunit-real-integration-test-results
-        path: ${{ env.TUNIT_RD_INT_DIR }}/${{env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
+        name: xunit3-real-integration-test-results
+        path: ${{ env.XUNIT3_RD_INT_TEST_RESULTS_DIR }}/${{env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME}}
 
-  tunit-external-tests:
-    runs-on: ubuntu-latest
-    needs: [tunit-real-integration-tests, 
-            tunit-integration-tests]
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+  # xunit3-external-tests:
+  #   runs-on: ubuntu-latest
+  #   needs: [xunit3-real-integration-tests, 
+  #           xunit3-integration-tests]
+  #   steps:
+  #   - name: Checkout Code
+  #     uses: actions/checkout@v4
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v3
-      with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-        dotnet-version: 9.0.x
+  #   - name: Setup dotnet
+  #     uses: actions/setup-dotnet@v3
+  #     with:
+  #       # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
+  #       dotnet-version: 9.0.x
 
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
+  #   - name: Compile solution
+  #     run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run External TUnit Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_TUNIT_PROJECT }} --no-build
+  #   - name: Run External XUnit3 Integration Tests
+  #     run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT3_PROJECT }} --no-build
 
-  tunit-real-external-tests:
-    runs-on: ubuntu-latest
-    needs: [tunit-real-integration-tests, 
-            tunit-integration-tests]
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+  # xunit3-real-external-tests:
+  #   runs-on: ubuntu-latest
+  #   needs: [xunit3-real-integration-tests, 
+  #           xunit3-integration-tests]
+  #   steps:
+  #   - name: Checkout Code
+  #     uses: actions/checkout@v4
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v3
-      with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-        dotnet-version: 9.0.x
+  #   - name: Setup dotnet
+  #     uses: actions/setup-dotnet@v3
+  #     with:
+  #       # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
+  #       dotnet-version: 9.0.x
 
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
+  #   - name: Compile solution
+  #     run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run External TUnit Real Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_TUNIT_PROJECT }} --no-build
+  #   - name: Run External XUnit3 Real Integration Tests
+  #     run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_XUNIT3_PROJECT }} --no-build
 
   generate-report:
     runs-on: ubuntu-latest
-    needs: [tunit-external-tests,
-            tunit-real-external-tests]
+    # needs: [xunit3-external-tests,
+    #         xunit3-real-external-tests]
+    needs: [xunit3-integration-tests,
+            xunit3-real-integration-tests]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
@@ -196,12 +201,12 @@ jobs:
     - name: Download tunit-integration-test results
       uses: actions/download-artifact@v4
       with:
-        name: tunit-integration-test-results
+        name: xunit3-integration-test-results
 
     - name: Download tunit-real-integration-test results
       uses: actions/download-artifact@v4
       with:
-        name: tunit-real-integration-test-results
+        name: xunit3-real-integration-test-results
 
     - name: Setup Java JDK for Codacy Code Coverage
       uses: actions/setup-java@v4.7.1
@@ -212,8 +217,8 @@ jobs:
     - name: Codacy Code Coverage
       run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l CSharp \
            -r ${{env.UNIT_COVERAGE_FILENAME}} \
-           -r ${{env.TUNIT_INTEGRATION_COVERAGE_FILENAME}} \
-           -r ${{env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME}} --partial
+           -r ${{env.XUNIT3_INTEGRATION_COVERAGE_FILENAME}} \
+           -r ${{env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME}} --partial
     
     # - name: Present working directory
     #   run: pwd
@@ -225,7 +230,7 @@ jobs:
       uses: danielpalme/ReportGenerator-GitHub-Action@5.4.7
       with:
         # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
-        reports: ${{env.UNIT_COVERAGE_FILENAME}}
+        reports: ${{env.UNIT_COVERAGE_FILENAME}};{{env.XUNIT3_INTEGRATION_COVERAGE_FILENAME}};{{env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME}}
         targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
         reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
 
