--- a/Saucery.Core/Saucery.Core.csproj
+++ b/Saucery.Core/Saucery.Core.csproj
@@ -17,7 +17,7 @@
 	  <PackageReleaseNotes>
 	    ChangeLog:
 	    v4.0.1
-	    - Initial Relese
+	    - Initial Release
 	  </PackageReleaseNotes>
 	  <PackageProjectUrl>https://github.com/Sauceforge/Saucery</PackageProjectUrl>
 	  <PackageIcon>Saucery.Core.128x128.png</PackageIcon>
