--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -485,25 +485,25 @@ jobs:
         name: xunit3-real-integration-test-results
         path: ${{ env.XUNIT3_RD_INT_TEST_RESULTS_DIR }}/${{env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME}}
 
-  # xunit3-external-tests:
-  #   runs-on: ubuntu-latest
-  #   needs: [xunit3-real-integration-tests, 
-  #           xunit3-integration-tests]
-  #   steps:
-  #   - name: Checkout Code
-  #     uses: actions/checkout@v4
+  xunit3-external-tests:
+    runs-on: ubuntu-latest
+    needs: [xunit3-real-integration-tests, 
+            xunit3-integration-tests]
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-  #   - name: Setup dotnet
-  #     uses: actions/setup-dotnet@v3
-  #     with:
-  #       # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-  #       dotnet-version: 9.0.x
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
+      with:
+        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
+        dotnet-version: 9.0.x
 
-  #   - name: Compile solution
-  #     run: dotnet build -c ${{ env.CONFIG }}
+    - name: Compile solution
+      run: dotnet build -c ${{ env.CONFIG }}
 
-  #   - name: Run External XUnit3 Integration Tests
-  #     run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT3_PROJECT }} --no-build
+    - name: Run External XUnit3 Integration Tests
+      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT3_PROJECT }} --no-build
 
   # xunit3-real-external-tests:
   #   runs-on: ubuntu-latest
@@ -529,8 +529,9 @@ jobs:
     runs-on: ubuntu-latest
     # needs: [xunit3-external-tests,
     #         xunit3-real-external-tests]
-    needs: [xunit3-integration-tests,
-            xunit3-real-integration-tests]
+    needs: [xunit3-external-tests]
+    # needs: [xunit3-integration-tests,
+    #         xunit3-real-integration-tests]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
