--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -505,33 +505,30 @@ jobs:
     - name: Run External XUnit3 Integration Tests
       run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT3_PROJECT }} --no-build
 
-  # xunit3-real-external-tests:
-  #   runs-on: ubuntu-latest
-  #   needs: [xunit3-real-integration-tests, 
-  #           xunit3-integration-tests]
-  #   steps:
-  #   - name: Checkout Code
-  #     uses: actions/checkout@v4
+  xunit3-real-external-tests:
+    runs-on: ubuntu-latest
+    needs: [xunit3-real-integration-tests, 
+            xunit3-integration-tests]
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-  #   - name: Setup dotnet
-  #     uses: actions/setup-dotnet@v3
-  #     with:
-  #       # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-  #       dotnet-version: 9.0.x
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
+      with:
+        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
+        dotnet-version: 9.0.x
 
-  #   - name: Compile solution
-  #     run: dotnet build -c ${{ env.CONFIG }}
+    - name: Compile solution
+      run: dotnet build -c ${{ env.CONFIG }}
 
-  #   - name: Run External XUnit3 Real Integration Tests
-  #     run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_XUNIT3_PROJECT }} --no-build
+    - name: Run External XUnit3 Real Integration Tests
+      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_XUNIT3_PROJECT }} --no-build
 
   generate-report:
     runs-on: ubuntu-latest
-    # needs: [xunit3-external-tests,
-    #         xunit3-real-external-tests]
-    needs: [xunit3-external-tests]
-    # needs: [xunit3-integration-tests,
-    #         xunit3-real-integration-tests]
+    needs: [xunit3-external-tests,
+            xunit3-real-external-tests]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
