Working Template Test for NUnit

--- a/Template.Tests/Template.Tests.csproj
+++ b/Template.Tests/Template.Tests.csproj
@@ -37,6 +37,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Snapshots\**\*" />
+    <None Include="Snapshots\**\*" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
