<CoverletExclude>tunit.generated*</CoverletExclude>

--- a/Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj
+++ b/Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <CollectCoverage>true</CollectCoverage>
+    <CoverletExclude>tunit.generated*</CoverletExclude>
     <CoverletOutputFormat>opencover</CoverletOutputFormat>
   </PropertyGroup>
 
