--- a/Merlin.TUnit/Merlin.TUnit.csproj
+++ b/Merlin.TUnit/Merlin.TUnit.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <CollectCoverage>true</CollectCoverage>
-    <CoverletExclude>tunit.generated*</CoverletExclude>
+    <CoverletExclude>TUnit.*</CoverletExclude>
     <CoverletOutputFormat>opencover</CoverletOutputFormat>
   </PropertyGroup>
 
