--- a/.github/workflows/xunit-pipeline.yml
+++ b/.github/workflows/xunit-pipeline.yml
@@ -100,8 +100,14 @@ jobs:
     - name: Build project
       run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run XUnit Integration Tests # as per https://xunit.net/docs/getting-started/v3/code-coverage-with-mtp
-      run: dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_XUNIT_PROJECT }} -- --coverage --coverage-output-format ${{ env.COVERAGE_FORMAT }} --coverage-output ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
+    - name: Run XUnit Integration Tests
+      uses: b3b00/coverlet-action@1.3.5-alpha2
+      with:
+        testProject: ${{ env.M_XUNIT_PROJECT }}
+        output: ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
+        outputFormat: ${{ env.COVERAGE_FORMAT }}
+        #threshold: ${{ env.COVERAGE_THRESHOLD }}
+        excludes: '[Merlin.XUnit]Tests.*'
      
     - name: Display structure of downloaded files
       run: ls -R
@@ -131,8 +137,14 @@ jobs:
     - name: Build project
       run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run XUnit Real Integration Tests # as per https://xunit.net/docs/getting-started/v3/code-coverage-with-mtp
-      run: dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_RD_XUNIT_PROJECT }} -- --coverage --coverage-output-format ${{ env.COVERAGE_FORMAT }} --coverage-output ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+    - name: Run XUnit Real Integration Tests
+      uses: b3b00/coverlet-action@1.3.5-alpha2
+      with:
+        testProject: ${{ env.M_RD_XUNIT_PROJECT }}
+        output: ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+        outputFormat: ${{ env.COVERAGE_FORMAT }}
+        #threshold: ${{ env.COVERAGE_THRESHOLD }}
+        excludes: '[Merlin.XUnit.RealDevice]Tests.*'
        
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
