convert to tunit tests

--- a/Saucery.Core.Tests/Saucery.Core.Tests.csproj
+++ b/Saucery.Core.Tests/Saucery.Core.Tests.csproj
@@ -11,18 +11,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="TUnit" Version="0.63.3" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="*" />
+    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" Version="*" />
+
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="coverlet.msbuild" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    
     <PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="4.14.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
     <PackageReference Include="Microsoft.Web.Xdt" Version="3.2.0" />
-    <PackageReference Include="xunit.v3" Version="3.1.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="Selenium.Support" Version="4.36.0" />
     <PackageReference Include="Shouldly" Version="4.3.0" />
