--- a/.github/workflows/xunit3-pipeline.yml
+++ b/.github/workflows/xunit3-pipeline.yml
@@ -43,6 +43,9 @@ env:
   XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME: cobertura.xunit3.realdevice.integration.xml
   COVERAGE_THRESHOLD: 80
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
