remove needs clause

--- a/.github/workflows/xunit-pipeline-external.yml
+++ b/.github/workflows/xunit-pipeline-external.yml
@@ -29,9 +29,7 @@ permissions:
 
 jobs:
   xunit-external-tests:
-    runs-on: ubuntu-latest
-    needs: [xunit-real-integration-tests, 
-            xunit-integration-tests]
+    runs-on: ubuntu-latests
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
