--- a/Saucery.Core.Tests/Saucery.Core.Tests.csproj
+++ b/Saucery.Core.Tests/Saucery.Core.Tests.csproj
@@ -13,8 +13,8 @@
 
   <ItemGroup>
     <PackageReference Include="TUnit" Version="0.63.3" />
-    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="*" />
-    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" Version="*" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.0.4" />
+    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" Version="1.9.0" />
     
     <PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="4.14.1" />
     <PackageReference Include="Microsoft.Web.Xdt" Version="3.2.0" />
