update Saucery reference

--- a/.github/workflows/tunit-pipeline.yml
+++ b/.github/workflows/tunit-pipeline.yml
@@ -118,15 +118,7 @@ jobs:
     
     - name: Run TUnit Integration Tests
       run: |
-       dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_TUNIT_PROJECT }} -- \
-       --report-trx \
-       --report-trx-filename "unit.trx" \
-       --coverage \
-       --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}" \
-       --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
-       --results-directory "TestResults" \
-       --log-level Debug \
-       --diagnostic
+       dotnet run -c ${{ env.CONFIG }} --project ${{ env.M_TUNIT_PROJECT }} -- --log-level Debug --diagnostic
 
 
     - name: Display structure of downloaded files
