--- a/Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj
+++ b/Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj
@@ -11,15 +11,9 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="coverlet.collector" Version="6.0.4">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="coverlet.msbuild" Version="6.0.4">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="TUnit" Version="0.67.19" />
+    <PackageReference Include="TUnit" Version="0.67.19" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.0.4" />
+    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" Version="1.9.0" />
 	</ItemGroup>
 
 	<ItemGroup>
