--- a/Template.Tests/Template.Tests.csproj
+++ b/Template.Tests/Template.Tests.csproj
@@ -11,10 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.4">
+    <!--<PackageReference Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    </PackageReference>-->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
     <PackageReference Include="Microsoft.TemplateEngine.Authoring.TemplateVerifier" Version="9.0.306" />
     <PackageReference Include="xunit" Version="2.9.3" />
@@ -23,15 +23,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Shouldly" Version="4.3.0" />
-    
-    <!--<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-
-    <PackageReference Include="Microsoft.TemplateEngine.Authoring.TemplateVerifier" Version="9.0.301" />
-    <PackageReference Include="xunit.v3" Version="2.0.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.1">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>-->
     
   </ItemGroup>
 
