trigger on all pull requests

--- a/.github/workflows/core-pipeline.yml
+++ b/.github/workflows/core-pipeline.yml
@@ -1,6 +1,9 @@
 name: Saucery.Core Pipeline
 
 on:
+  pull_request:
+     branches:
+      - '**'
   push:
     paths:
       - '.github/workflows/core-pipeline.yml'
